# MDS-AML-HiggsBosonATLAS

./: .gitignore  Practical_work1.ipynb  README.md  dvc.yaml  evaluate.py  preprocess.py  pyproject.toml  train.py
data/processed/: .gitignore
data/raw/: .gitignore
data/zip/: .gitignore
models/: bayesian_logreg_trace.nc
notebooks/: 00-preprocess.ipynb  01-logisctic-regression.ipynb  02-bayesian-logistic-regression.ipynb  04-naive-bayes-model-selection.ipynb  05-model-selection-results-analysis.ipynb  06-naive-bayes-final-trainings.ipynb  P01-marginal-distributions.ipynb  Practical_work1.ipynb  bayesian-logistic-regression.ipynb  logisctic-regression.ipynb  model-selection-results-analysis.ipynb  naive-bayes-final-trainings.ipynb  naive-bayes-model-selection.ipynb  non-normal-naive-bayes.ipynb  preprocess.ipynb
results/: experiments-failed.jsonl  final-experiments-failed.jsonl  final-experiments-results.jsonl  final-experiments.jsonl  naive_bayes_model_selection_failed_experiments_intermediate.csv
src/: evaluate.py  load_data.py  train.py
src/naive_bayes/: __init__.py  box_cox_gaussian_estimator.py  categorical_estimator.py  gaussian_estimator.py  histogram_estimator.py  robust_categorical_estimator.py  robust_histogram_estimator.py  yeo_johnson_gaussian_estimator.py
src/naive_bayes/experiments/: __init__.py
src/naive_bayes/kde_estimators/: __init__.py  gaussian_kernel.py  robust_gaussian_kernel.py
